--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 
     .brand-name{
       font-family:'Cormorant Garamond',serif;
-      font-size:2.6rem; letter-spacing:2px; font-weight:300; color:var(--ink-700);
+      font-size:2.6rem; letter-spacing:2px; font-weight:300; color:#5C3A40;
     }
     .divider{
       width:72px;height:1px;margin:18px auto 10px;
       background:linear-gradient(90deg,transparent,var(--brand-500),transparent);
     }
     .tagline{
-      color:var(--ink-500); font-size:.95rem; letter-spacing:1.6px; text-transform:uppercase; font-weight:300;
+      color:#5C3A40; font-size:.95rem; letter-spacing:1.6px; text-transform:uppercase; font-weight:300;
     }
 
     /* social icons — luxo em vidro */
@@ -153,16 +153,14 @@
     .link-arrow{ width:22px; height:22px; stroke: var(--brand-600); opacity:.75; transition: transform .35s ease, opacity .35s ease; }
     .link-card:hover .link-arrow{ transform: translateX(4px); opacity:1; }
 
-    /* badge */
-
-	.badge{
-	position:absolute; top:12px; right:12px;
-	background:#5C3A40; /* cor pedida */
-	color:#fff; padding:6px 14px; border-radius:999px; font-size:.72rem; letter-spacing:1.2px;
-	border:1px solid rgba(255,255,255,.25); text-transform:uppercase; font-weight:400;
-	box-shadow: 0 6px 18px rgba(92,58,64,.35);
-		}
-
+/* badge */
+.badge{
+  position:absolute; top:12px; right:12px;
+  background:#5C3A40; /* cor pedida */
+  color:#fff; padding:6px 14px; border-radius:999px; font-size:.72rem; letter-spacing:1.2px;
+  border:1px solid rgba(255,255,255,.25); text-transform:uppercase; font-weight:400;
+  box-shadow: 0 6px 18px rgba(92,58,64,.35);
+}
 
     /* destaque */
     .featured-card{
